prevent break the word in chat content

--- a/src/app/Styles/talking.scss
+++ b/src/app/Styles/talking.scss
@@ -80,7 +80,7 @@
 
     p {
       text-align: left;
-      word-break: break-all;
+      word-break: break-word;
       margin: 0;
       white-space: pre-wrap;
     }
